Fix spacing issue

--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,7 @@ section {
 /* projects section */
 
 #projects-box {
-    padding: 2em 0;
+    margin: 2em 0;
 }
 
 #arrow {
